Removed the need for backstretch.js on the homepage. Configured the about text to pull from the page vs a widget. Pull in the correct featured image.

--- a/css/home.css
+++ b/css/home.css
@@ -122,6 +122,16 @@
 	position:absolute !important;
 	top:0;
 }
+.carousel li picture{
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+.carousel li picture img{
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+}
 
 .titles{
 	height:200px;
@@ -228,7 +238,7 @@
 #meText h6{
 	margin-bottom:0;
 }
-#meText .textwidget{
+#meText .textWidget{
 	font-size:18px;
 	line-height:26px;
 }
@@ -241,6 +251,18 @@
 	#meText{
 		width:280px;
 	}
+}
+
+/* About Image */
+#aboutMe picture {
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+#aboutMe picture img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
 }
 
 
